--- a/style/news.css
+++ b/style/news.css
@@ -3,9 +3,24 @@
 .top{
     margin:3px;
 }
+ /*新闻标题*/
 .title{
     font-family: PingFangTC-Semibold;
-    font-size: 24px;
+    font-size: 16px;
     color: #FFFFFF;
-    margin-left:60px;
+    margin-left:30px;
+
+}
+
+/*卡片样式*/
+.card{
+    border:solid white 5px;
+    height:290px;
+}
+
+/*浏览次数*/
+.views{
+    color:#264843;
+    font-size: 10px;
+    margin-left:30px;
 }
