--- a/style/news.css
+++ b/style/news.css
@@ -5,7 +5,7 @@
 }
  /*新闻标题*/
 .title{
-    font-family: PingFangTC-Semibold;
+    font-family: Arial;
     font-size: 16px;
     color: #FFFFFF;
     margin-left:30px;
@@ -23,4 +23,17 @@
     color:#264843;
     font-size: 10px;
     margin-left:30px;
+}
+
+/*个人评测*/
+.question{
+    border:solid #f0f1f4 1px;
+    border:solid white 5px;
+    height:250px;
+}
+
+.q1{
+    color:#264843;
+    font-family: Arial;
+    font-size:16px;
 }
